cluster/apps/tools/harbor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: traefik
    hajimari.io/enable: 'true'
    hajimari.io/icon: web
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-rfc1918@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - harbor.${SECRET_DOMAIN}
        - notary.${SECRET_DOMAIN}
      secretName: harbor-tls
  rules:
    - host: harbor.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
    - host: notary.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 4443
