cluster/apps/tools/harbor/network-policy.yaml
# allow to/from traefik

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: harbor
  namespace: tools
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: harbor
  ingress:
  - ports:
    - port: 80
    - port: 4443
    from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: networking
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
